testsuite/tests/indexed-types/should_fail/SimpleFail4.stderr

SimpleFail4.hs:10:11: error:
    Unexpected type ‘Int’
    In the default declaration for ‘S2’
    A default declaration should have form
      default S2 a = ...
